# Skygine-sdl

./: .gitignore  README.md  Skygine-core.sln  Skygine.VC.opendb  Skygine.sln  Skygine.vcxproj  Skygine.vcxproj.filters
Skygine-core/: CMakeLists.txt  Skygine-core.sln  Skygine-core.vcxproj  Skygine-core.vcxproj.filters  Stormengine-core.vcxproj  Stormengine-core.vcxproj.filters  main.cpp
Skygine-core/assets/: map-tiles.aseprite  nyson-sheet.aseprite  nyson.aseprite  resources.json
Skygine-core/assets/maps/: map-test.aseprite  map-tiled-test.tmx  map-tiled.json  map-tiled.tmx  map-tiles-2.aseprite  map-tiles.aseprite
Skygine-core/assets/particles/: particles-sheet.aseprite
Skygine-core/assets/ui/: ui_buttons.aseprite
Skygine-core/cmake/: FindSDL2.cmake  FindSDL2_image.cmake
Skygine-core/src/: main.cpp
Skygine-core/src/ai/: AStarFinding.cpp  AStarFinding.h  AStarSearchCell.cpp  AStarSearchCell.h
Skygine-core/src/core/: Engine.cpp  Engine.h
Skygine-core/src/entities/: Entity.cpp  Entity.h  GameObject.cpp  GameObject.h  GameObjectFactory.cpp  GameObjectFactory.h  InteractionRect.cpp  InteractionRect.h
Skygine-core/src/graphics/: BaseSprite.cpp  BaseSprite.h  Camera.cpp  Camera.h  IRenderable.h  ParticleSpawner.cpp  ParticleSpawner.h  Sprite.cpp  Sprite.h  SpriteAnimation.cpp  SpriteAnimation.h  SpriteSheetRegion.cpp  SpriteSheetRegion.h  TextureManager.cpp  TextureManager.h  TextureSequence.cpp  TextureSequence.h  buffer.cpp  buffer.h  indexbuffer.cpp  indexbuffer.h  (+6 more)
Skygine-core/test/: fileutilsspec.h  matr4spec.h  test.h  vect2spec.h  vect4spec.h
(+119 files in other folders)
